# genuary_2026

./: .gitignore  README.md  pyproject.toml
src/genuary_2026/: __init__.py  day01.py  day02.py  day03.py  day04.py  day05.py  day07.py
