[project]
name = "genuary-2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "James Ashford", email = "ashfordj@rocketmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "autograd>=1.8.0",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "scikit-image>=0.26.0",
    "scipy>=1.16.3",
    "shapely>=2.1.2",
    "tqdm>=4.67.1",
]

[project.scripts]
genuary-2026 = "genuary_2026:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
